exploring javascript and jquery

--- a/project/templates/_base.html
+++ b/project/templates/_base.html
@@ -58,6 +58,7 @@
     </div><!-- /.container -->
 
     <!-- scripts -->
+    <script src="/static/js/main.js"></script>
     <script src="/static/js/jquery-1.11.3.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
   </body>
