--- a/project/templates/bid_form_edit.html
+++ b/project/templates/bid_form_edit.html
@@ -86,7 +86,8 @@ Completion Date: {{ form.completion_date(placeholder="MM/DD/YYYY") }}<br>
             <tr>
               <td width="75px">{{ item.description }}</td>
               <td width="30px"><a href="{{ url_for('item.item_edit', item_edit_id=item.id) }}">Edit</a></td>
-              <td width="30px"><a href="{{ url_for('item.item_delete', item_delete_id=item.id) }}">Delete</a></td>
+              <td width="30px"><a href="{{ url_for('item.item_delete', item_delete_id=item.id) }}"
+                              onclick="return confirm('Are you sure you want to delete this item?');">Delete</a></td>
               <td width="30px">{{ "{0:0.1f}".format(item.quantity) }}</td>
               <td width="30px">{{ "{0:0.2f}".format(item.cost) }}</td>
               <td width="30px">{{ "{0:0.2f}".format(item.total) }}</td>
