--- a/project/templates/services.html
+++ b/project/templates/services.html
@@ -18,7 +18,8 @@
           <td width="200px">{{ service.description }}</td>
           <td width="50px">{{ "{0:0.2f}".format(service.cost) }}</td>
           <td width="50px"><a href="{{ url_for('service.service_edit', service_edit_id=service.id) }}">Edit</a></td>
-          <td width="50px"><a href="{{ url_for('service.service_delete', service_delete_id=service.id) }}">Delete</a></td>
+          <td width="50px"><a href="{{ url_for('service.service_delete', service_delete_id=service.id) }}"
+                              onclick="return confirm('Are you sure you want to delete this item?');">Delete</a></td>
       </tr>
       {% endfor %}
     </table>
