add basic link to create pdf to bid form

--- a/project/templates/bid_form_edit.html
+++ b/project/templates/bid_form_edit.html
@@ -68,6 +68,7 @@ Completion Date: {{ form.completion_date(placeholder="MM/DD/YYYY") }}<br>
 <br>
 <div class="entries">
   <h4>Items (<a href="{{ url_for('item.item_add', bid_id=bid_id) }}">Add</a>)</h4>
+    <h4><a href="{{ url_for('bid.bid_create_pdf', bid_id_pdf=bid_id) }}" target="_blank">PDF</a></h4>
     <div class="datagrid">
     <table>
       <thead>
