--- a/project/templates/customers.html
+++ b/project/templates/customers.html
@@ -2,6 +2,20 @@
 
 {% block content %}
 
+<form class="form-signin" role="form" method="post" action="/customers/">
+  {{ form.csrf_token }}
+  {{ form.name(placeholder="customer name") }}
+    <span class="error">
+      {% if form.name.errors %}
+        {% for error in form.name.errors %}
+          {{ error }}
+        {% endfor %}
+      {% endif %}
+    </span>
+    <button class="btn btn-sm btn-success" type="submit">Search</button>
+  </form>
+
+
 <div class="entries">
   <h4>Customers (<a href="{{ url_for('customer.customer_add') }}">Add</a>)</h4>
   <div class="datagrid">
