--- a/project/templates/customer_details.html
+++ b/project/templates/customer_details.html
@@ -6,14 +6,14 @@
  {{ "(" + customer.telephone[:3] + ") " + customer.telephone[3:6] + "-" + customer.telephone[6:] }}<br>
  {{ customer.email }}<br>
  Created: {{ customer.created_date }}<br>
-<a href="{{ url_for('customer.customer_edit', customer_edit_id=customer_id) }}">Edit</a>&nbsp;
-<a href="{{ url_for('customer.customer_delete', customer_del_id=customer_id) }}"
-                              onclick="return confirm('Are you sure you want to delete this item?');">Delete</a>
+<a href="{{ url_for('customer.customer_edit', customer_edit_id=customer_id) }}" class="btn btn-sm btn-info" role="button">Edit</a>
+<a href="{{ url_for('customer.customer_delete', customer_del_id=customer_id) }}" class="btn btn-sm btn-danger"
+   role="button" onclick="return confirm('Are you sure you want to delete this item?');">Delete</a>
 <br>
 <br>
 
 <div class="entries">
-  <h4>Addresses (<a href="{{ url_for('address.address_add', customer_id=customer_id) }}">Add</a>)</h4>
+  <h4>Addresses <a href="{{ url_for('address.address_add', customer_id=customer_id) }}" class="btn btn-sm btn-success" role="button">Add</a></h4>
   <div class="datagrid">
     <table>
       <thead>
