--- a/project/templates/customers.html
+++ b/project/templates/customers.html
@@ -17,7 +17,7 @@
 
 
 <h4 class="entries">
-  <h4>Customers  <a href="{{ url_for('customer.customer_add') }}" class="btn btn-sm btn-success" role="button">Add</a></h4>
+  <h4><strong>Customers </strong><a href="{{ url_for('customer.customer_add') }}" class="btn btn-sm btn-success" role="button">Add</a></h4>
   <div class="datagrid">
     <table>
       <thead>
