--- a/project/templates/services.html
+++ b/project/templates/services.html
@@ -2,7 +2,8 @@
 {% block content %}
 
 <div class="entries">
-  <h4>Services (<a href="{{ url_for('service.service_add') }}">Add</a>)</h4>
+  <h4><strong>Services </strong><a href="{{ url_for('service.service_add') }}"
+          class="btn btn-sm btn-success">Add</a></h4>
   <div class="datagrid">
     <table>
       <thead>
