adding in timepicker widget. just the very basics are working

--- a/project/templates/bid_form_add.html
+++ b/project/templates/bid_form_add.html
@@ -6,6 +6,16 @@
 {{ address.city }}, {{ address.state }} {{ address.zip }}
 <br>
 
+<br>
+<div class="example-container">
+    <p>Trying Basic Time Widget:</p>
+    <div>
+        <input type="text" name="datetime" id="datetime" value="Enter Date">
+    </div>
+</div>
+
+
+
 <form class="form-signin" role="form" method="post" action="{{ action }}">
   {{ form.csrf_token }}
 
