--- a/project/templates/_base.html
+++ b/project/templates/_base.html
@@ -8,8 +8,10 @@
     <meta name="author" content="">
     <title>Madsen Concrete</title>
     <!-- styles -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/jquery-ui.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/jquery-ui-timepicker-addon.css') }}" rel="stylesheet">
   </head>
   <body>
 
@@ -60,6 +62,20 @@
     <!-- scripts -->
     <script src="/static/js/main.js"></script>
     <script src="/static/js/jquery-1.11.3.min.js"></script>
+    <script src="/static/js/jquery-ui.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/static/js/jquery-ui-timepicker-addon.js"></script>
+
+
+    <script type="text/javascript">
+    $(function() {
+        $('#datetime').datetimepicker({
+          showSecond: true,
+          timeFormat: 'hh:mm:ss',
+          stepHour: 2,
+          stepMinute: 10,
+         });
+    });
+    </script>
   </body>
 </html>
